change the code not supported in Java 11